# os_sub

./: .gitignore  README.md  build.cmd  build.sh  clean.cmd  clean.sh  setup_windows.cmd  setup_windows.ps1  update.cmd  update.sh
hello_world/: .gitignore  CMakeLists.txt  Makefile  hello.cpp  hello_world.c  main.c
lab1/: build.cmd  clean.sh  run.cmd  run.sh
lab1/hello_world/: CMakeLists.txt  main.cpp
lab1/src/: hello.cpp  main.cpp
lab2/: Makefile  build.cmd  build.sh  clean.cmd  clean.sh  main.cpp  p_launcher.cpp  p_launcher.hpp  p_t  run.cmd  run.sh
lab2/p_launcher/: CMakeLists.txt  main.cpp  p_launcher.cpp
lab2/src/: CMakeLists.txt  main.cpp  p_launcher.cpp  p_launcher.hpp
lab3/: build.cmd  build.sh  clean.cmd  clean.sh  log.txt  run.cmd  run.sh
lab3/logger/: CMakeLists.txt  main.cpp
lab3/src/: CMakeLists.txt  main.cpp
lab4/: build.cmd  build.sh  run_port_simulator.cmd  run_port_simulator.sh  run_service.cmd  run_service.sh
lab4/src/: CMakeLists.txt  port_simulator.cpp  service.cpp
